Test(:white_check_mark:): PurchaseServiceTest get purchases by client